--- a/bigbluebutton/module.css
+++ b/bigbluebutton/module.css
@@ -1,11 +1,12 @@
 div#bigbluebutton {
-	border: 1px solid #ccc;
+	border: 0px solid #ccc;
 	padding: 10px;
 	width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-	background-color: #efefef;
-	color: #444;
+	background-color: #FFFFFF;
+	color: #000000;
 	margin-top: 30px;
 	margin-bottom: 30px;
+	
 }
