--- a/bigbluebutton/module.css
+++ b/bigbluebutton/module.css
@@ -1,12 +1,11 @@
 div#bigbluebutton {
-	border: 0px solid #ccc;
+	border: 1px solid #ccc;
 	padding: 10px;
-	width: 80%;
+	width: 50%;
 	margin-right: auto;
 	margin-left: auto;
-	background-color: #FFFFFF;
-	color: #000000;
+	background-color: #efefef;
+	color: #444;
 	margin-top: 30px;
 	margin-bottom: 30px;
-	
 }
